<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/water_wallpaper"
    android:orientation="vertical">


    <Button
        android:id="@+id/loginButton"
        android:layout_width="224dp"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="italic" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:verticalScrollbarPosition="right"
        app:title="FontAppBeta"
        app:titleMarginStart="10dp"
        tools:layout_editor_absoluteX="0dp">

    </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="fontapp_logo"
            app:srcCompat="@mipmap/ic_logo"
            android:layout_marginLeft="106dp"
            android:layout_marginStart="106dp"
            android:layout_marginVertical="70dp"/>



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="157dp"
        android:fontFamily="sans-serif"
        android:shadowColor="#009EDF"
        android:text="@string/benvenuto"
        android:textAlignment="center"
        android:textColor="#009EDF"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:hint="@string/username"
        android:id="@+id/editTextUser"
        android:layout_width="224dp"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="247dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="91dp"
        android:background="@drawable/gradient_asset"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        android:layout_marginStart="91dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/password"
        android:layout_width="224dp"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="305dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="91dp"
        android:background="@drawable/gradient_asset"
        android:ems="10"
        android:textSize="12sp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        android:layout_marginStart="91dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_account_circle_black_24dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="308dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_lock"
        android:layout_marginStart="60dp" />

    <TextView
        android:id="@+id/textAccountRegister"
        android:layout_width="224dp"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="388dp"
        android:layout_marginBottom="276dp"
        android:layout_marginLeft="91dp"
        android:background="@drawable/gradient"
        android:contextClickable="true"
        android:text="@string/no_account"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/getPassword"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="435dp"
        android:text="Hai dimenticato la password? Clicca qui"
        android:textSize="12sp"
        android:textStyle="italic"
        android:clickable="true"
        android:layout_marginLeft="105dp"
        android:textColor="#fff"
        android:backgroundTint="#192CB6" />

</RelativeLayout>
