<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:hint="@string/username"
        android:id="@+id/editTextUser"
        android:layout_width="224dp"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="247dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="91dp"
        android:background="@drawable/gradient_asset"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        android:layout_marginStart="91dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/password"
        android:layout_width="224dp"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="305dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="91dp"
        android:background="@drawable/gradient_asset"
        android:ems="10"
        android:textSize="12sp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        android:layout_marginStart="91dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_account_circle_black_24dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="308dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_lock"
        android:layout_marginStart="60dp" />

    <TextView
        android:id="@+id/textAccountRegister"
        android:layout_width="224dp"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="388dp"
        android:layout_marginBottom="276dp"
        android:layout_marginLeft="91dp"
        android:background="@drawable/gradient"
        android:contextClickable="true"
        android:text="@string/no_account"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</RelativeLayout>